@@ -75,21 +75,21 @@
 (test/violation? (port-position (current-output-port)))
 
 ;; string-output-port
-#;(let-values (([port get-string] (open-string-output-port)))
+(let-values (([port get-string] (open-string-output-port)))
   (test/t (port-has-set-port-position!? port))
   (test/t (port-has-port-position? port))
   (test* (port-position port) 0)
-  (display #\a)
+  (display #\a port)
   (test* (port-position port) 1)
   (set-port-position! port 2)
-  (display "cd")
+  (display "cd" port)
   (test* (port-position port) 4)
   (set-port-position! port 1)
-  (display #\b)
+  (display #\b port)
   (test* (get-string) "abcd")
   (test* (port-position port) 0)
   (test* (get-string) "")
-  (display #\a)
+  (display #\a port)
   (test* (get-string) "a")
   (test* (port-position port) 0)
 )
